xLib6000 Change Log

v2.0.0

Converted to Unified Logging
Opus.swift - added client_handle token (2.4.9.x addition)
Radio.swift - added mute_local_audio_when_remote token (2.4.9.x addition)
Api.swift - changed kApiFirmwareSupport to 2.4.9.x
Api.swift - eliminated tcpError(_ msg: String) in TcpManager Delegate methods
Api.swift - eliminated udpMessage(_ msg: String, level: OSLogType) in UdpManager Delegate methods
TcpManager.swift - eliminated tcpError(_ msg: String) in TcpManager Delegate protocol
UdpManager.swift - eliminated udpMessage(_ msg: String, level: OSLogType) in UdpManager Delegate protocol




Changed major version number from 1 to 2 due to conversion to Unified Logging in place of Log Delegate

============================================================

v1.2.13

Meter.swift - added new units to Unit enum, adjusted usage of units

v1.2.12

Opus.swift - removed "didSet..." from _delegate
Opus.swift - in sendTxAudio(buffer:samples:) corrected format of Vita packet
Opus.swift - added static params to top of file
Api.swift - in setConnectionState(_:) commented out "Client connection established" message
Vita.swift - corrected comments in init(packetType:classCode:streamId:tsi:tsf:)
Vita.swift - added convenience init(type:streamId:)
Vita.swift - commented out class discovery(payload:) - unused
Opus.swift - used Vita's init(type:streamId:)
Opus.swift - renamed static rate to sampleRate (changed from Int to Double)
Opus.swift - renamed static frameLength to frameCount
Opus.swift - renamed static channels to channelCount
Opus.swift - added static rxStreamId
TxAudioStream.swift - used Vita's init(type:streamId:)
Notifications.swift - rename "opusHasBeenAdded" to "opusRxHasBeenAdded"
Notifications.swift - rename "opusWillBeRemoved" to "opusRxWillBeRemoved"
Notifications.swift - added "opusTxHasBeenAdded" and "opusTxWillBeRemoved"
Radio.swift & Opus.swift - updated usage to match renamed notifications